// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() catches unmet requirements errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "fooYour requirements could not be resolved to an installable set of packages.bar",
    },
  },
]
`;

exports[`.updateArtifacts() performs lockFileMaintenance 1`] = `
Array [
  Object {
    "cmd": "composer install --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`.updateArtifacts() returns updated composer.lock 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode 1`] = `
Array [
  Object {
    "cmd": "docker run --rm --user=foobar -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache/others/composer\\":\\"/tmp/renovate/cache/others/composer\\" -e COMPOSER_CACHE_DIR -w \\"/tmp/github/some/repo\\" renovate/composer composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`.updateArtifacts() supports global mode 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`.updateArtifacts() uses hostRules to write auth.json 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;
